Update header z-index to fix project status overlapping bug

--- a/plugins/lunchbadger-core/src/components/Header/Header.scss
+++ b/plugins/lunchbadger-core/src/components/Header/Header.scss
@@ -8,7 +8,7 @@
   left: 0;
   height: $header-height;
   display: table;
-  z-index: ($z-index-high + 1);
+  z-index: ($z-index-top + 1);
 }
 
 .header__menu {
